// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderAlert is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    aria-label="Dismiss"
    class="euiButtonIcon euiButtonIcon--primary euiHeaderAlert__dismiss"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
  <div
    class="euiHeaderAlert__title"
  >
    title
  </div>
  <div
    class="euiHeaderAlert__text"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__action euiLink"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiHeaderAlert renders action 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    aria-label="Dismiss"
    class="euiButtonIcon euiButtonIcon--primary euiHeaderAlert__dismiss"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
  <div
    class="euiHeaderAlert__title"
  >
    title
  </div>
  <div
    class="euiHeaderAlert__text"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__action euiLink"
      >
        <button>
          Quietly take to the ship
        </button>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiHeaderAlert renders date as an element 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    aria-label="Dismiss"
    class="euiButtonIcon euiButtonIcon--primary euiHeaderAlert__dismiss"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
  <div
    class="euiHeaderAlert__title"
  >
    shazm
  </div>
  <div
    class="euiHeaderAlert__text"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__action euiLink"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__date"
      >
        <h2>
          October 18, 1851
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiHeaderAlert renders title as an element 1`] = `
<div
  aria-label="aria-label"
  class="euiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    aria-label="Dismiss"
    class="euiButtonIcon euiButtonIcon--primary euiHeaderAlert__dismiss"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
  <div
    class="euiHeaderAlert__title"
  >
    <h2>
      Circumambulate the city
    </h2>
  </div>
  <div
    class="euiHeaderAlert__text"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__action euiLink"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
</div>
`;
